adding logstash and differenc config error

--- a/docker-compose/templates/elasticsearch.j2
+++ b/docker-compose/templates/elasticsearch.j2
@@ -42,6 +42,8 @@ services:
     volumes:
       #- ./:/usr/share/elasticsearch/config/certs
       - ./certs:/usr/share/elasticsearch/config/certificates
+      - ./data:/data
+
 
 
 
