--- a/docker-compose/templates/elasticsearch.j2
+++ b/docker-compose/templates/elasticsearch.j2
@@ -105,3 +105,35 @@ services:
     #ports:
     #  - 5601:5601
 
+  eexporter:
+    container_name: eexporter
+    image: justwatch/elasticsearch_exporter:1.0.2
+    command:
+        - '-es.uri=https://elastic:Test@1234@master:9200'
+        - '-es.ca=/certs/ca/ca.crt'
+    restart: always
+    volumes:
+      - ./certs:/certs
+    ports:
+        - "9108:9108"
+
+
+  prometheus:
+    image: prom/prometheus:0.18.0
+    container_name: prometheus
+    volumes:
+        - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+        - '-config.file=/etc/prometheus/prometheus.yml'
+    ports:
+        - '9090:9090'
+
+  grafana:
+    image: grafana/grafana:6.1.6
+    container_name: grafana
+    environment:
+        - GF_SECURITY_ADMIN_PASSWORD=pass
+    links:
+        - prometheus
+    ports:
+        - "3000:3000" 
